# vorpalstacks-conformance-tests

./: .gitignore  LICENSE  README.md
sdktests/python/: pyproject.toml
sdktests/python/src/conformance/: __main__.py  conftest.py  runner.py
sdktests/python/src/conformance/services/: acm_service.py  apigateway_service.py  athena_service.py  cloudfront_service.py  cloudtrail_service.py  cloudwatch_service.py  cloudwatchlogs_service.py  cognito_service.py  dynamodb_service.py  eventbridge_service.py  iam_service.py  kinesis_service.py  kms_service.py  lambda_service.py  route53_service.py  s3_service.py  scheduler_service.py  secretsmanager_service.py  sesv2_service.py  sns_service.py  sqs_service.py  ssm_service.py  stepfunctions_service.py  sts_service.py  timestream_service.py  waf_service.py
sdktests/python/src/conformance/services/acm/: conftest.py  test_acm.py
sdktests/python/src/conformance/services/apigateway/: conftest.py  test_apigateway.py
sdktests/python/src/conformance/services/athena/: conftest.py  test_athena.py
sdktests/python/src/conformance/services/cloudfront/: conftest.py  test_cloudfront.py
sdktests/python/src/conformance/services/cloudtrail/: conftest.py  test_cloudtrail.py
sdktests/python/src/conformance/services/cloudwatch/: conftest.py  test_cloudwatch.py
sdktests/python/src/conformance/services/cloudwatchlogs/: conftest.py  test_cloudwatchlogs.py
sdktests/python/src/conformance/services/cognito/: conftest.py  test_cognito_clients.py  test_cognito_errors.py  test_cognito_groups.py  test_cognito_pools.py  test_cognito_resources.py  (+2 more)
(+460 files in other folders)
