[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vorpalstacks-sdk-tests-python"
version = "1.0.0"
description = "Python SDK conformance tests for VorpalStacks (AWS-compatible)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.0",
    "botocore>=1.42.0",
]

[project.scripts]
sdk-tests-py = "conformance.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
