[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vorpalstacks-sdk-tests-python"
version = "2.0.0"
description = "Python SDK conformance tests for VorpalStacks (AWS-compatible)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.89",
    "botocore>=1.42.89",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout"]

[project.scripts]
sdk-tests-py = "conformance.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/conformance"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "service(name): mark test as belonging to a specific AWS service",
]
timeout = 120
